--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
               <div class="review-wrap active">
                 <div class="review-content">
                   <p>
-                    Eu fiquei impressionado com a qualidade das frutas e verduras da Gavião Frutas! Tudo é fresquinho e muito saboroso. Além disso, a equipe é muito atenciosa e sempre me ajuda a escolher os melhores produtos. Com certeza, vou continuar comprando na Gavião Frutas!
+                    Eu fiquei impressionada com a qualidade das frutas e verduras do Gavião Frutas! Tudo é fresquinho e muito saboroso. Além disso, a equipe é muito atenciosa e sempre me ajuda a escolher os melhores produtos. Com certeza, vou continuar comprando na Gavião Frutas!
                   </p>
                   <div
                     class="review-img bg-img"
