--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         </a>
         <div class="menu h-xs">
           <a href="#home">
-<<<<<<< HEAD
             <div class="menu-item active">Início</div>
           </a>
           <a href="#about">
@@ -78,7 +77,6 @@
           </a>
           <a href="#testimonial">
             <div class="menu-item">Clientes</div>
-=======
             <div class="menu-item active">Home</div>
           </a>
           <a href="#about">
@@ -89,16 +87,12 @@
           </a>
           <a href="#testimonial">
             <div class="menu-item">Testimonials</div>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
           </a>
         </div>
         <div class="right-menu">
           <div class="cart-btn">
-<<<<<<< HEAD
             <i class="bx bxl-instagram-alt"></i>
-=======
             <i class='bx bxl-instagram-alt'></i>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
           </div>
         </div>
       </div>
@@ -108,17 +102,13 @@
     <section
       id="home"
       class="fullheight align-items-center bg-img bg-img-fixed"
-<<<<<<< HEAD
       style="background-image: url(assets/gaviao_fruts.png)"
-=======
       style="background-image: url(assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)"
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
     >
       <div class="container">
         <div class="row">
           <div class="col-6 col-xs-12">
             <div class="slogan">
-<<<<<<< HEAD
               <h1 class="left-to-right play-on-scroll">
                 Gavião frutas e Verduras
               </h1>
@@ -132,11 +122,9 @@
                 AL e garantimos um serviço rápido e eficiente. Faça sua
                 encomenda hoje e experimente a diferença que a Gavião Frutas
                 pode fazer na sua vida.
-=======
               <h1 class="left-to-right play-on-scroll">Gavião frutas e Verduras</h1>
               <p class="left-to-right play-on-scroll delay-2">
                 Bem-vindo à Gavião Frutas! Oferecemos as melhores frutas e verduras frescas para garantir que você tenha uma alimentação saudável e equilibrada. Com a nossa seleção cuidadosa de produtos de qualidade, você pode ter a certeza de que está comprando alimentos nutritivos e deliciosos. Não perca tempo e encomende agora mesmo. Entregamos em toda Santa Luzia do Norte - AL e garantimos um serviço rápido e eficiente. Faça sua encomenda hoje e experimente a diferença que a Gavião Frutas pode fazer na sua vida.
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
               </p>
               <div class="left-to-right play-on-scroll delay-4">
                 <button>Encomende agora</button>
@@ -161,7 +149,6 @@
           <div class="col-5 col-xs-12 align-items-center">
             <div class="about-slogan right-to-left play-on-scroll">
               <h3>
-<<<<<<< HEAD
                 <span class="primary-color">Escolha saudável</span> para uma
                 <span class="primary-color">vida</span> equilibrada
               </h3>
@@ -175,8 +162,7 @@
                 sua saúde e bem-estar. Opte por uma vida equilibrada com o
                 Gavião Frutas!
               </p>
-            </div>1
-=======
+            </div>
                 <span class="primary-color">We</span> create
                 <span class="primary-color">delicious</span> memories for
                 <span class="primary-color">you</span>
@@ -188,7 +174,6 @@
                 nihil impedit vero magni, distinctio soluta!
               </p>
             </div>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
           </div>
         </div>
       </div>
@@ -204,7 +189,6 @@
     >
       <div class="container">
         <div class="food-menu">
-<<<<<<< HEAD
           <h1>
             Variedade de
             <span class="primary-color">frutas e verduras</span> para o seu dia
@@ -236,7 +220,6 @@
             </div>
             <div class="zoom play-on-scroll delay-8">
               <button data-food-type="dolor">Ofertas Especiais</button>
-=======
           <h1>What will <span class="primary-color">you</span> eat today?</h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
@@ -259,7 +242,6 @@
             </div>
             <div class="zoom play-on-scroll delay-8">
               <button data-food-type="dolor">Dolor</button>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
             </div>
           </div>
 
@@ -452,14 +434,11 @@
             <div class="review-wrap zoom play-on-scroll delay-2">
               <div class="review-content">
                 <p>
-<<<<<<< HEAD
                   Excelente serviço! Os produtos do Gavião Frutas são sempre frescos e saborosos. A equipe é muito atenciosa e o processo de compra foi fácil e rápido. Recomendo a todos que buscam opções saudáveis e de qualidade.
-=======
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Ullam, labore nisi non molestias, minus laboriosam nostrum
                   impedit iure facilis odio unde quia ad sunt corrupti dolores
                   ratione voluptatibus quidem explicabo.
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
                 </p>
                 <div
                   class="review-img bg-img"
@@ -469,11 +448,8 @@
                 ></div>
               </div>
               <div class="review-info">
-<<<<<<< HEAD
                 <h3>Layla</h3>
-=======
                 <h3>Lorem Ipsum Dolor</h3>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
                 <div class="rating">
                   <i class="bx bxs-star"></i>
                   <i class="bx bxs-star"></i>
@@ -489,15 +465,12 @@
               <div class="review-wrap active">
                 <div class="review-content">
                   <p>
-<<<<<<< HEAD
                     Eu fiquei impressionada com a qualidade das frutas e
                     verduras do Gavião Frutas! Tudo é fresquinho e muito
                     saboroso. Além disso, a equipe é muito atenciosa e sempre me
                     ajuda a escolher os melhores produtos. Com certeza, vou
                     continuar comprando na Gavião Frutas!
-=======
                     Eu fiquei impressionada com a qualidade das frutas e verduras do Gavião Frutas! Tudo é fresquinho e muito saboroso. Além disso, a equipe é muito atenciosa e sempre me ajuda a escolher os melhores produtos. Com certeza, vou continuar comprando na Gavião Frutas!
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
                   </p>
                   <div
                     class="review-img bg-img"
@@ -507,11 +480,8 @@
                   ></div>
                 </div>
                 <div class="review-info">
-<<<<<<< HEAD
                   <h3>Lindinalva</h3>
-=======
                   <h3>Lorem Ipsum Dolor</h3>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
                   <div class="rating">
                     <i class="bx bxs-star"></i>
                     <i class="bx bxs-star"></i>
@@ -527,14 +497,11 @@
             <div class="review-wrap zoom play-on-scroll delay-4">
               <div class="review-content">
                 <p>
-<<<<<<< HEAD
                   Sou cliente fiel do Gavião Frutas há meses e não tenho do que reclamar! Sempre encontro uma grande variedade de frutas e verduras frescas na loja, e a qualidade é impecável. Além disso, os preços são justos e o serviço de entrega é eficiente. Recomendo de olhos fechados!
-=======
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Ullam, labore nisi non molestias, minus laboriosam nostrum
                   impedit iure facilis odio unde quia ad sunt corrupti dolores
                   ratione voluptatibus quidem explicabo.
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
                 </p>
                 <div
                   class="review-img bg-img"
@@ -544,11 +511,8 @@
                 ></div>
               </div>
               <div class="review-info">
-<<<<<<< HEAD
                 <h3>Anthony</h3>
-=======
                 <h3>Lorem Ipsum Dolor</h3>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
                 <div class="rating">
                   <i class="bx bxs-star"></i>
                   <i class="bx bxs-star"></i>
@@ -564,21 +528,16 @@
     </section>
     <!-- END TESTIMONIAL SECTION -->
     <!-- FOOTER SECTION -->
-<<<<<<< HEAD
     <section class="footer bg-img">
-=======
     <section
       class="footer bg-img"
-      
     >
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
       <div class="container">
         <div class="row">
           <div class="col-6 col-xs-12">
             <h1>Gavião Frutas e Verduras</h1>
             <br />
             <p>
-<<<<<<< HEAD
               Siga-nos nas redes sociais para ficar por dentro das novidades do Gavião Frutas! Curta nossa página no Facebook, siga-nos no Instagram e entre em contato conosco pelo WhatsApp para obter informações sobre nossos produtos e promoções exclusivas. Agradecemos por sua visita e estamos à disposição para atendê-lo!
             </p>
             <br />
@@ -611,7 +570,6 @@
             </p>
             <p>
               <a href="#arrivals"><i class="bx bxs-right-arrow-alt"></i> Contato</a>
-=======
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
               Incidunt, quas harum? Atque eius quaerat fuga sint molestiae illo
               corrupti vitae voluptatibus. Dicta rerum est delectus perspiciatis
@@ -636,7 +594,6 @@
             </p>
             <p>
               <a href="#"> Lorem ipsum </a>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
             </p>
           </div>
           <div class="col-4 col-xs-12">
