--- a/index.html
+++ b/index.html
@@ -1,18 +1,10 @@
 <!DOCTYPE html>
-<<<<<<< HEAD
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gaviao Frutas</title>
-=======
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gavião frutas</title>
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
@@ -24,10 +16,6 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-<<<<<<< HEAD
-=======
-
->>>>>>> 109fa05d1c34720cfffb990350e2e7da0e731cd4
   <body>
     <!-- MOBILE NAV -->
     <div class="mb-nav">
@@ -77,22 +65,11 @@
           </a>
           <a href="#testimonial">
             <div class="menu-item">Clientes</div>
-            <div class="menu-item active">Home</div>
-          </a>
-          <a href="#about">
-            <div class="menu-item">About</div>
-          </a>
-          <a href="#food-menu-section">
-            <div class="menu-item">Menu</div>
-          </a>
-          <a href="#testimonial">
-            <div class="menu-item">Testimonials</div>
           </a>
         </div>
         <div class="right-menu">
           <div class="cart-btn">
             <i class="bx bxl-instagram-alt"></i>
-            <i class='bx bxl-instagram-alt'></i>
           </div>
         </div>
       </div>
@@ -103,7 +80,6 @@
       id="home"
       class="fullheight align-items-center bg-img bg-img-fixed"
       style="background-image: url(assets/gaviao_fruts.png)"
-      style="background-image: url(assets/brooke-lark-08bOYnH_r_E-unsplash.jpg)"
     >
       <div class="container">
         <div class="row">
@@ -122,9 +98,6 @@
                 AL e garantimos um serviço rápido e eficiente. Faça sua
                 encomenda hoje e experimente a diferença que a Gavião Frutas
                 pode fazer na sua vida.
-              <h1 class="left-to-right play-on-scroll">Gavião frutas e Verduras</h1>
-              <p class="left-to-right play-on-scroll delay-2">
-                Bem-vindo à Gavião Frutas! Oferecemos as melhores frutas e verduras frescas para garantir que você tenha uma alimentação saudável e equilibrada. Com a nossa seleção cuidadosa de produtos de qualidade, você pode ter a certeza de que está comprando alimentos nutritivos e deliciosos. Não perca tempo e encomende agora mesmo. Entregamos em toda Santa Luzia do Norte - AL e garantimos um serviço rápido e eficiente. Faça sua encomenda hoje e experimente a diferença que a Gavião Frutas pode fazer na sua vida.
               </p>
               <div class="left-to-right play-on-scroll delay-4">
                 <button>Encomende agora</button>
@@ -162,18 +135,7 @@
                 sua saúde e bem-estar. Opte por uma vida equilibrada com o
                 Gavião Frutas!
               </p>
-            </div>
-                <span class="primary-color">We</span> create
-                <span class="primary-color">delicious</span> memories for
-                <span class="primary-color">you</span>
-              </h3>
-              <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio
-                natus placeat et eos, dignissimos voluptatem tempora
-                necessitatibus doloribus! Eum qui doloribus odio dolor tenetur
-                nihil impedit vero magni, distinctio soluta!
-              </p>
-            </div>
+            </div>1
           </div>
         </div>
       </div>
@@ -220,28 +182,6 @@
             </div>
             <div class="zoom play-on-scroll delay-8">
               <button data-food-type="dolor">Ofertas Especiais</button>
-          <h1>What will <span class="primary-color">you</span> eat today?</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque
-            alias aliquam eveniet, iure praesentium dicta ex dolorum inventore
-            itaque minus repudiandae, odio provident? Velit architecto natus
-            expedita non? Odio, dolorum.
-          </p>
-          <div class="food-category">
-            <div class="zoom play-on-scroll">
-              <button class="active" data-food-type="all">All food</button>
-            </div>
-            <div class="zoom play-on-scroll delay-2">
-              <button data-food-type="salad">Salad</button>
-            </div>
-            <div class="zoom play-on-scroll delay-4">
-              <button data-food-type="lorem">Lorem</button>
-            </div>
-            <div class="zoom play-on-scroll delay-6">
-              <button data-food-type="ipsum">Ipsum</button>
-            </div>
-            <div class="zoom play-on-scroll delay-8">
-              <button data-food-type="dolor">Dolor</button>
             </div>
           </div>
 
@@ -435,10 +375,6 @@
               <div class="review-content">
                 <p>
                   Excelente serviço! Os produtos do Gavião Frutas são sempre frescos e saborosos. A equipe é muito atenciosa e o processo de compra foi fácil e rápido. Recomendo a todos que buscam opções saudáveis e de qualidade.
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Ullam, labore nisi non molestias, minus laboriosam nostrum
-                  impedit iure facilis odio unde quia ad sunt corrupti dolores
-                  ratione voluptatibus quidem explicabo.
                 </p>
                 <div
                   class="review-img bg-img"
@@ -449,7 +385,6 @@
               </div>
               <div class="review-info">
                 <h3>Layla</h3>
-                <h3>Lorem Ipsum Dolor</h3>
                 <div class="rating">
                   <i class="bx bxs-star"></i>
                   <i class="bx bxs-star"></i>
@@ -470,7 +405,6 @@
                     saboroso. Além disso, a equipe é muito atenciosa e sempre me
                     ajuda a escolher os melhores produtos. Com certeza, vou
                     continuar comprando na Gavião Frutas!
-                    Eu fiquei impressionada com a qualidade das frutas e verduras do Gavião Frutas! Tudo é fresquinho e muito saboroso. Além disso, a equipe é muito atenciosa e sempre me ajuda a escolher os melhores produtos. Com certeza, vou continuar comprando na Gavião Frutas!
                   </p>
                   <div
                     class="review-img bg-img"
@@ -481,7 +415,6 @@
                 </div>
                 <div class="review-info">
                   <h3>Lindinalva</h3>
-                  <h3>Lorem Ipsum Dolor</h3>
                   <div class="rating">
                     <i class="bx bxs-star"></i>
                     <i class="bx bxs-star"></i>
@@ -498,10 +431,6 @@
               <div class="review-content">
                 <p>
                   Sou cliente fiel do Gavião Frutas há meses e não tenho do que reclamar! Sempre encontro uma grande variedade de frutas e verduras frescas na loja, e a qualidade é impecável. Além disso, os preços são justos e o serviço de entrega é eficiente. Recomendo de olhos fechados!
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Ullam, labore nisi non molestias, minus laboriosam nostrum
-                  impedit iure facilis odio unde quia ad sunt corrupti dolores
-                  ratione voluptatibus quidem explicabo.
                 </p>
                 <div
                   class="review-img bg-img"
@@ -512,7 +441,6 @@
               </div>
               <div class="review-info">
                 <h3>Anthony</h3>
-                <h3>Lorem Ipsum Dolor</h3>
                 <div class="rating">
                   <i class="bx bxs-star"></i>
                   <i class="bx bxs-star"></i>
@@ -529,9 +457,6 @@
     <!-- END TESTIMONIAL SECTION -->
     <!-- FOOTER SECTION -->
     <section class="footer bg-img">
-    <section
-      class="footer bg-img"
-    >
       <div class="container">
         <div class="row">
           <div class="col-6 col-xs-12">
@@ -570,30 +495,6 @@
             </p>
             <p>
               <a href="#arrivals"><i class="bx bxs-right-arrow-alt"></i> Contato</a>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-              Incidunt, quas harum? Atque eius quaerat fuga sint molestiae illo
-              corrupti vitae voluptatibus. Dicta rerum est delectus perspiciatis
-              nemo nihil autem! Doloremque?
-            </p>
-            <br />
-            <p>Email: example@mail.com</p>
-            <p>Phone: +00 123 456 789</p>
-            <p>Website: gaviaofrutas.com</p>
-          </div>
-          <div class="col-2 col-xs-12">
-            <h1>About us</h1>
-            <br />
-            <p>
-              <a href="#"> Chefs </a>
-            </p>
-            <p>
-              <a href="#"> Menu </a>
-            </p>
-            <p>
-              <a href="#"> Testimonials </a>
-            </p>
-            <p>
-              <a href="#"> Lorem ipsum </a>
             </p>
           </div>
           <div class="col-4 col-xs-12">
