implementacao login/register

--- a/index.html
+++ b/index.html
@@ -52,32 +52,36 @@
   </a>
   <!-- END BACK TO TOP BTN -->
   <!-- TOP NAVIGATION -->
-  <div class="nav">
-    <div class="menu-wrap">
+<!-- TOP NAVIGATION -->
+<div class="nav">
+  <div class="menu-wrap">
+    <a href="#home">
+      <div class="logo">Gavião frutas</div>
+    </a>
+    <div class="menu h-xs">
       <a href="#home">
-        <div class="logo">Gavião frutas</div>
+        <div class="menu-item active">Início</div>
       </a>
-      <div class="menu h-xs">
-        <a href="#home">
-          <div class="menu-item active">Início</div>
-        </a>
-        <a href="#about">
-          <div class="menu-item">Sobre Nós</div>
-        </a>
-        <a href="#food-menu-section">
-          <div class="menu-item">Catálogo</div>
-        </a>
-        <a href="#footer">
-          <div class="menu-item">Contato</div>
-        </a>
-      </div>
-      <div id="cart-icon" onclick="openCartMenu()">
-        <i class="bx bx-shopping-bag"></i>
-        <span class="cart-count">0</span>
-      </div>
-
+      <a href="#about">
+        <div class="menu-item">Sobre Nós</div>
+      </a>
+      <a href="#food-menu-section">
+        <div class="menu-item">Catálogo</div>
+      </a>
+      <a href="#footer">
+        <div class="menu-item">Contato</div>
+      </a>
+      <a href="../gaviaofrutas/pages/login.html">
+        <div class="menu-item">Login</div>
+      </a>
+    </div>
+    <div id="cart-icon" onclick="openCartMenu()">
+      <i class="bx bx-shopping-bag"></i>
+      <span class="cart-count">0</span>
     </div>
   </div>
+</div>
+
   <!-- SISTEMA DE CARRINHO-->
   <div class="cart-menu" id="cart-menu">
     <div class="cart-menu-content">
