--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <a href="#footer">
         <div class="menu-item">Contato</div>
       </a>
-      <a href="../gaviaofrutas/pages/login.html">
+      <a href="pages/login.html">
         <div class="menu-item">Login</div>
       </a>
     </div>
