--- a/index.html
+++ b/index.html
@@ -5,19 +5,43 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Gaviao Frutas</title>
+  
+  <!-- Título otimizado -->
+  <title>Gavião Frutas e Verduras - Atacadista de Frutas em Santa Luzia do Norte</title>
+  
+  <!-- Meta descrição -->
+  <meta name="description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas. CEP: 57130-000." />
+  
+  <!-- Meta tags adicionais -->
+  <meta name="keywords" content="Gavião Frutas, Gavião Verduras, Atacadista de Frutas, Santa Luzia do Norte, Frutas Frescas, Verduras Frescas, CEP 57130-000" />
+  <meta name="author" content="Gavião Frutas e Verduras" />
+  <meta name="robots" content="index, follow" />
+  
+  <!-- Open Graph meta tags para redes sociais -->
+  <meta property="og:title" content="Gavião Frutas e Verduras - Atacadista de Frutas em Santa Luzia do Norte" />
+  <meta property="og:description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas." />
+  <meta property="og:image" content="URL_DA_IMAGEM_DE_DESTAQUE" />
+  <meta property="og:url" content="https://www.gaviaofrutas.com.br" />
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card meta tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Gavião Frutas e Verduras - Atacadista de Frutas em Santa Luzia do Norte" />
+  <meta name="twitter:description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas." />
+  <meta name="twitter:image" content="URL_DA_IMAGEM_DE_DESTAQUE" />
+  
+  <!-- Links para fontes e ícones -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
   <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  
+  <!-- Links para estilos -->
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="carrinho.css" />
-
+  
+  <!-- Script deferido -->
   <script src="carrinho.js" defer></script>
-
 </head>
 
 <body>
