Sistema de seo-google

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   <meta name="description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas. CEP: 57130-000." />
   
   <!-- Meta tags adicionais -->
-  <meta name="keywords" content="Gavião Frutas, Gavião Verduras, Atacadista de Frutas, Santa Luzia do Norte, Frutas Frescas, Verduras Frescas, CEP 57130-000" />
+  <meta name="keywords" content="gaviao frutas, frutas, Gavião Frutas, frutas e verduras, Frutas e Verduras gaviao, gavião, Gavião Verduras, Atacadista de Frutas, Santa Luzia do Norte, Frutas Frescas, Verduras Frescas, CEP 57130-000" />
   <meta name="author" content="Gavião Frutas e Verduras" />
   <meta name="robots" content="index, follow" />
   
   <!-- Open Graph meta tags para redes sociais -->
   <meta property="og:title" content="Gavião Frutas e Verduras - Atacadista de Frutas em Santa Luzia do Norte" />
   <meta property="og:description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas." />
-  <meta property="og:image" content="URL_DA_IMAGEM_DE_DESTAQUE" />
+  <meta property="og:image" content="https://i.ibb.co/JzsHKTv/Filing-system-amico.png" />
   <meta property="og:url" content="https://www.gaviaofrutas.com.br" />
   <meta property="og:type" content="website" />
   
@@ -28,7 +28,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Gavião Frutas e Verduras - Atacadista de Frutas em Santa Luzia do Norte" />
   <meta name="twitter:description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas." />
-  <meta name="twitter:image" content="URL_DA_IMAGEM_DE_DESTAQUE" />
+  <meta name="twitter:image" content="https://gaviaofrutas.com.br/assets/dan-gold-4_jhDO54BYg-unsplash.jpg" />
   
   <!-- Links para fontes e ícones -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
@@ -50,6 +50,34 @@
     'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-T2X3JWG');</script>
     <!-- End Google Tag Manager -->
+
+      <!-- Prefetch DNS -->
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+  <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+
+  <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Gavião Frutas e Verduras",
+        "url": "https://www.gaviaofrutas.com.br",
+        "logo": "https://i.ibb.co/JzsHKTv/Filing-system-amico.png",
+        "description": "Gavião Frutas e Verduras é um atacadista de frutas e verduras localizado em Santa Luzia do Norte, AL. Oferecemos uma ampla variedade de produtos frescos, cuidadosamente selecionados para garantir qualidade e sabor. Nosso compromisso é fornecer aos nossos clientes os melhores alimentos para uma vida saudável e equilibrada.",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+55 82 98711-4659",
+            "contactType": "Customer Service"
+        },
+        "sameAs": [
+            "https://www.facebook.com/gaviao_fr",
+            "https://www.instagram.com/gaviao_fr/",
+            "https://www.twitter.com/gaviao_fr",
+            "https://www.linkedin.com/company/gaviao_fr"
+        ]
+    }
+</script>
+  
 </head>
 
 <body>
@@ -346,7 +374,7 @@
           <br />
           <div>
             <h1>Rede sociais</h1>
-            <a href="https://www.instagram.com/gaviao_frg/" target="_blank"><i class="bx bxl-instagram"></i>
+            <a href="https://www.instagram.com/gaviao_fr/" target="_blank"><i class="bx bxl-instagram"></i>
               instagram</a>
             <div class="whatsapp">
               <a href="https://api.whatsapp.com/send?phone=5582987114659&text=%20Olá! Eu encontrei o seu site e gostaria de obter mais informações sobre seus produtos/serviços.%20%20Poderia me fornecer mais detalhes? Obrigado!"
