--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
           <br />
           Localização: Visite-nos em nossa loja física em Santa Luzia do Norte, AL, e descubra a qualidade e variedade
           das frutas e verduras do Gavião Frutas. Estamos convenientemente localizados na cidade </br>
-          <a href="https://goo.gl/maps/GYuT1nnfxG41makV9" target="_blank"><i class="bx bxs-map"></i>Santa Luzia Do
+          <a href="https://www.google.com/maps/place/Gavi%C3%A3o+frutas/@-9.6010851,-35.8254772,17z/data=!4m14!1m7!3m6!1s0x701490160ded679:0xa06f375f5c8af1c8!2sGavi%C3%A3o+frutas!8m2!3d-9.6010904!4d-35.8229023!16s%2Fg%2F11hf80rfhs!3m5!1s0x701490160ded679:0xa06f375f5c8af1c8!8m2!3d-9.6010904!4d-35.8229023!16s%2Fg%2F11hf80rfhs?entry=ttu" target="_blank"><i class="bx bxs-map"></i>Santa Luzia Do
             Norte - Alagoas</a>, e será um prazer atendê-lo pessoalmente. Venha nos fazer uma visita e desfrute de uma
           experiência frutífera!
           </p>
