refatoriando sistem de seo

--- a/index.html
+++ b/index.html
@@ -6,79 +6,80 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
-  <!-- Título otimizado -->
-  <title>Gavião Frutas e Verduras - Atacadista de Frutas em Santa Luzia do Norte</title>
-  
-  <!-- Meta descrição -->
-  <meta name="description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas. CEP: 57130-000." />
-  
-  <!-- Meta tags adicionais -->
-  <meta name="keywords" content="gaviao frutas, frutas, Gavião Frutas, frutas e verduras, Frutas e Verduras gaviao, gavião, Gavião Verduras, Atacadista de Frutas, Santa Luzia do Norte, Frutas Frescas, Verduras Frescas, CEP 57130-000" />
-  <meta name="author" content="Gavião Frutas e Verduras" />
-  <meta name="robots" content="index, follow" />
-  
-  <!-- Open Graph meta tags para redes sociais -->
-  <meta property="og:title" content="Gavião Frutas e Verduras - Atacadista de Frutas em Santa Luzia do Norte" />
-  <meta property="og:description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas." />
-  <meta property="og:image" content="https://i.ibb.co/JzsHKTv/Filing-system-amico.png" />
-  <meta property="og:url" content="https://www.gaviaofrutas.com.br" />
-  <meta property="og:type" content="website" />
-  
-  <!-- Twitter Card meta tags -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Gavião Frutas e Verduras - Atacadista de Frutas em Santa Luzia do Norte" />
-  <meta name="twitter:description" content="Gavião Frutas e Verduras - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas." />
-  <meta name="twitter:image" content="https://gaviaofrutas.com.br/assets/dan-gold-4_jhDO54BYg-unsplash.jpg" />
-  
-  <!-- Links para fontes e ícones -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
-  <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-  
-  <!-- Links para estilos -->
-  <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="carrinho.css" />
-  
-  <!-- Script deferido -->
-  <script src="carrinho.js" defer></script>
+    <!-- Título otimizado -->
+    <title>Gavião Frutas e Alimentos - Atacadista de Frutas em Santa Luzia do Norte</title>
+      
+    <!-- Meta descrição -->
+    <meta name="description" content="Gavião Frutas e Alimentos - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas. CEP: 57130-000." />
+
+    <!-- Meta tags adicionais -->
+    <meta name="keywords" content="gaviao frutas, frutas, Gavião Frutas, frutas e verduras, Frutas e Verduras gaviao, gavião, Gavião Verduras, Atacadista de Frutas, Santa Luzia do Norte, Frutas Frescas, Verduras Frescas, CEP 57130-000" />
+    <meta name="author" content="Gavião Frutas e Alimentos" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph meta tags para redes sociais -->
+    <meta property="og:title" content="Gavião Frutas e Alimentos - Atacadista de Frutas em Santa Luzia do Norte" />
+    <meta property="og:description" content="Gavião Frutas e Alimentos - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas." />
+    <meta property="og:image" content="https://i.ibb.co/JzsHKTv/Filing-system-amico.png" />
+    <meta property="og:url" content="https://www.gaviaofrutas.com.br" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Gavião Frutas e Alimentos - Atacadista de Frutas em Santa Luzia do Norte" />
+    <meta name="twitter:description" content="Gavião Frutas e Alimentos - Atacadista de frutas e verduras frescas em Santa Luzia do Norte. Visite-nos e descubra a melhor qualidade em frutas." />
+    <meta name="twitter:image" content="https://gaviaofrutas.com.br/assets/dan-gold-4_jhDO54BYg-unsplash.jpg" />
+
+    <!-- Links para fontes e ícones -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet" />
+    <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+
+    <!-- Links para estilos -->
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="carrinho.css" />
+
+    <!-- Script deferido -->
+    <script src="carrinho.js" defer></script>
 
     <!-- Google Tag Manager -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer','GTM-T2X3JWG');</script>
-    <!-- End Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-T2X3JWG');</script>
+      <!-- End Google Tag Manager -->
 
-      <!-- Prefetch DNS -->
-  <link rel="dns-prefetch" href="//fonts.googleapis.com">
-  <link rel="dns-prefetch" href="//fonts.gstatic.com">
-  <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+    <!-- Prefetch DNS -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="dns-prefetch" href="//fonts.gstatic.com">
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
 
-  <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "Organization",
-        "name": "Gavião Frutas e Verduras",
-        "url": "https://www.gaviaofrutas.com.br",
-        "logo": "https://i.ibb.co/JzsHKTv/Filing-system-amico.png",
-        "description": "Gavião Frutas e Verduras é um atacadista de frutas e verduras localizado em Santa Luzia do Norte, AL. Oferecemos uma ampla variedade de produtos frescos, cuidadosamente selecionados para garantir qualidade e sabor. Nosso compromisso é fornecer aos nossos clientes os melhores alimentos para uma vida saudável e equilibrada.",
-        "contactPoint": {
-            "@type": "ContactPoint",
-            "telephone": "+55 82 98711-4659",
-            "contactType": "Customer Service"
-        },
-        "sameAs": [
-            "https://www.facebook.com/gaviao_fr",
-            "https://www.instagram.com/gaviao_fr/",
-            "https://www.twitter.com/gaviao_fr",
-            "https://www.linkedin.com/company/gaviao_fr"
-        ]
-    }
-</script>
-  
-</head>
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Gavião Frutas e Alimentos",
+          "url": "https://www.gaviaofrutas.com.br",
+          "logo": "https://i.ibb.co/JzsHKTv/Filing-system-amico.png",
+          "description": "Gavião Frutas e Alimentos é um atacadista de frutas e verduras localizado em Santa Luzia do Norte, AL. Oferecemos uma ampla variedade de produtos frescos, cuidadosamente selecionados para garantir qualidade e sabor. Nosso compromisso é fornecer aos nossos clientes os melhores alimentos para uma vida saudável e equilibrada.",
+          "contactPoint": {
+              "@type": "ContactPoint",
+              "telephone": "+55 82 98711-4659",
+              "contactType": "Customer Service"
+          },
+          "sameAs": [
+              "https://www.facebook.com/gaviao_fr",
+              "https://www.instagram.com/gaviao_fr/",
+              "https://www.twitter.com/gaviao_fr",
+              "https://www.linkedin.com/company/gaviao_fr"
+          ]
+      }
+    </script>
+
+  </head>
 
 <body>
 
