Alert personalizado-Manutencao

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <link href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
+    <!-- SweetAlert2 CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+
     <!-- Links para estilos -->
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="carrinho.css" />
@@ -414,6 +417,9 @@
     </div>
   </section>
   <!-- END FOOTER SECTION -->
+
+  <!-- SweetAlert2 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   <script src="storage.js"></script>
   <script src="products.js"></script>
