--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  
+
+  <!-- Ícone da página (favicon) -->
+  <link rel="icon" type="image/png" href="assets/icon.png">
+
     <!-- Título otimizado -->
     <title>Gavião Frutas e Alimentos - Atacadista de Frutas em Santa Luzia do Norte</title>
       
