--- a/pages/login.html
+++ b/pages/login.html
@@ -6,106 +6,110 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="login.css" />
+
+		<!-- Inclua o CSS do SweetAlert -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
+		
+	<!-- Inclua o script do SweetAlert -->
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 	<title>Formulário de login e inscrição</title>
 </head>
 
 <body>
-	<div class="container">
-		<div class="forms-container">
-			<div class="signin-signup">
-				<form action="#" class="sign-in-form">
-					<h2 class="title">Entrar</h2>
-					<div class="input-field">
-						<i class="fas fa-user"></i>
-						<input type="text" placeholder="Nome de usuário" />
-					</div>
-					<div class="input-field">
-						<i class="fas fa-lock"></i>
-						<input type="password" placeholder="Senha" />
-					</div>
-					<input type="submit" value="Login" class="btn solid" />
-					<p class="social-text">Ou faça login em plataformas sociais</p>
-					<div class="social-media">
-						<a href="#" class="social-icon">
-							<i class="fab fa-facebook-f"></i>
-						</a>
-						<a href="#" class="social-icon">
-							<i class="fab fa-twitter"></i>
-						</a>
-						<a href="#" class="social-icon">
-							<i class="fab fa-google"></i>
-						</a>
-						<a href="#" class="social-icon">
-							<i class="fab fa-linkedin-in"></i>
-						</a>
-					</div>
-				</form>
-				<form action="#" class="sign-up-form">
-					<h2 class="title">Inscrever-se</h2>
-					<div class="input-field">
-						<i class="fas fa-user"></i>
-						<input type="text" placeholder="Nome de usuário" />
-					</div>
-					<div class="input-field">
-						<i class="fas fa-envelope"></i>
-						<input type="email" placeholder="E-mail" />
-					</div>
-					<div class="input-field">
-						<i class="fas fa-lock"></i>
-						<input type="password" placeholder="Senha" />
-					</div>
-					<input type="submit" class="btn" value="Sign up" />
-					<p class="social-text">Ou inscreva-se em plataformas sociais</p>
-					<div class="social-media">
-						<a href="#" class="social-icon">
-							<i class="fab fa-facebook-f"></i>
-						</a>
-						<a href="#" class="social-icon">
-							<i class="fab fa-twitter"></i>
-						</a>
-						<a href="#" class="social-icon">
-							<i class="fab fa-google"></i>
-						</a>
-						<a href="#" class="social-icon">
-							<i class="fab fa-linkedin-in"></i>
-						</a>
-					</div>
-				</form>
-			</div>
-		</div>
+     <!-- Formulário de login e registro -->
+  <div class="container">
+    <div class="forms-container">
+      <div class="signin-signup">
 
-		<div class="panels-container">
-			<div class="panel left-panel">
-				<div class="content">
-					<h3>Novo em nossa comunidade?</h3>
-					<p>
-                                                
-                        Descubra um mundo de possibilidades! Junte-se a nós e explore uma vibrante
-                        comunidade onde as ideias florescem e as conexões prosperam.
-					</p>
-					<button class="btn transparent" id="sign-up-btn">
-						Inscrever-se
-					</button>
-				</div>
-				<img  src="https://i.ibb.co/fM670hw/Tablet-login-bro.png" class="image" alt="" />
-			</div>
-			<div class="panel right-panel">
-				<div class="content">
-					<h3>Um de nossos valiosos membros</h3>
-					<p>
-                        Obrigado por fazer parte da nossa comunidade. Sua presença enriquece nosso
-                        experiências compartilhadas. Vamos continuar essa jornada juntos!
-					</p>
-					<button class="btn transparent" id="sign-in-btn">
-						Entrar
-					</button>
-				</div>
-				<img src="https://i.ibb.co/JzsHKTv/Filing-system-amico.png"  class="image" alt="" />
-			</div>
-		</div>
-	</div>
+        <form action="#" class="sign-in-form" id="loginForm">
+          <h2 class="title">Entrar</h2>
+          <div class="input-field">
+            <i class="fas fa-user"></i>
+            <input type="text" id="loginUsername" placeholder="Nome de usuário" />
+          </div>
+          <div class="input-field">
+            <i class="fas fa-lock"></i>
+            <input type="password" id="loginPassword" placeholder="Senha" />
+          </div>
+          <input type="submit" value="Login" class="btn solid" />
+          <p class="social-text">Ou faça login em plataformas sociais</p>
+          <div class="social-media">
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-google"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+        </form>
 
-	<script src="login.js"></script>
+        <form action="#" class="sign-up-form">
+          <h2 class="title">Inscrever-se</h2>
+          
+          <div class="input-field">
+            <i class="fas fa-user"></i>
+            <input type="text" id="signupUsername" placeholder="Nome de usuário" />
+          </div>
+
+          <div class="input-field">
+            <i class="fas fa-envelope"></i>
+            <input type="email" id="signupEmail" placeholder="E-mail" />
+          </div>
+
+          <div class="input-field">
+            <i class="fas fa-lock"></i>
+            <input type="password" id="signupPassword" placeholder="Senha" />
+          </div>
+
+          <input type="submit" class="btn" value="Sign up" />
+          <p class="social-text">Ou inscreva-se em plataformas sociais</p>
+          <div class="social-media">
+            <a href="#" class="social-icon">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-twitter"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-google"></i>
+            </a>
+            <a href="#" class="social-icon">
+              <i class="fab fa-linkedin-in"></i>
+            </a>
+          </div>
+        </form>
+
+      </div>
+    </div>
+
+        <div class="panels-container">
+            <div class="panel left-panel">
+                <div class="content">
+                    <h3>Novo em nossa comunidade?</h3>
+                    <p>Descubra um mundo de possibilidades! Junte-se a nós e explore uma vibrante comunidade onde as ideias florescem e as conexões prosperam.</p>
+                    <button class="btn transparent" id="sign-up-btn">Inscrever-se</button>
+                </div>
+                <img src="https://i.ibb.co/fM670hw/Tablet-login-bro.png" class="image" alt="" />
+            </div>
+            <div class="panel right-panel">
+                <div class="content">
+                    <h3>Um de nossos valiosos membros</h3>
+                    <p>Obrigado por fazer parte da nossa comunidade. Sua presença enriquece nosso experiências compartilhadas. Vamos continuar essa jornada juntos!</p>
+                    <button class="btn transparent" id="sign-in-btn">Entrar</button>
+                </div>
+                <img src="https://i.ibb.co/JzsHKTv/Filing-system-amico.png" class="image" alt="" />
+            </div>
+        </div>
+    </div>
+
+    <script src="login.js" defer></script>
 </body>
 
 </html>
