--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <a href="#footer">
         <div class="menu-item">Contato</div>
       </a>
-      <a href="./dist/pages/login.html">
+      <a href="pages/login.html">
         <div class="menu-item">Login</div>
       </a>
     </div>
