--- a/index.html
+++ b/index.html
@@ -97,56 +97,26 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
 
-  <!-- MOBILE NAV -->
-  <!-- <div class="mb-nav">
-    <div class="mb-move-item"></div>
-    <div class="mb-nav-item active">
-      <a href="#home">
-        <i class="bx bxs-home"></i>
-      </a>
-    </div>
-    <div class="mb-nav-item">
-      <a href="#about">
-        <i class="bx bxs-wink-smile"></i>
-      </a>
-    </div>
-    <div class="mb-nav-item">
-      <a href="#food-menu-section">
-        <i class="bx bxs-food-menu"></i>
-      </a>
-    </div>
-    <div class="mb-nav-item">
-      <a href="#testimonial">
-        <i class="bx bxs-comment-detail"></i>
-      </a>
-    </div>
-  </div> -->
-
   <!-- BACK TO TOP BTN -->
   <a href="#home" class="back-to-top">
     <i class="fal fa-arrow-to-top"></i>
   </a>
-
-  <!-- WHATS APP -->
-  <!-- <div class="whatsIcon">
-    <img src="assets/imgs/whats.png" alt="">
-  </div> -->
 
   <!-- MENU -->
   <header class="nav">
     <nav class="menu-wrap">
       <!-- LOGO -->
       <a href="#home" class="logo">
-        <img src="assets/imgs/logo.png" alt="">
+        <img src="assets/imgs/logoOFC.png" alt="">
         <h2>Gavião Frutas</h2>
       </a>
 
       <ul id="linksMenu">
         <li><a href="#home"  class="linkActive">Início</a></li>
         <li><a href="#about">Sobre Nós</a></li>
-        <li><a href="pages/catalogo.html" ">Catálogo</a></li>
+        <li><a href="pages/catalogo.html">Catálogo</a></li>
         <li><a href="#contacts" >Contatos</a></li>
-        <li><a class="loginLink" href="pages/login.html" ">Login</a></li>
+        <li><a class="loginLink" href="pages/login.html">Login</a></li>
       </ul>
       <!-- CARRINHO ICONE -->
       <div class="btnCart" onclick="openCartMenu()">
@@ -160,8 +130,6 @@
         <i id="btnCloseMenu" class="fal fa-times"></i>
       </div>
     </nav>
-    <!-- <div class="cartButton buttonAll" id="cart-icon" >
-    </div> -->
   </header>
 
   <!-- SISTEMA DE CARRINHO-->
@@ -192,15 +160,6 @@
       </h1>
       <p>
         Bem-vindo à Gavião Frutas! Frutas e verduras frescas entregues em <strong></strong>. Encomende agora e desfrute de alimentos saudáveis e saborosos.
-        <!-- Bem-vindo à Gavião Frutas! Oferecemos as melhores frutas e
-        verduras frescas para garantir que você tenha uma alimentação
-        saudável e equilibrada. Com a nossa seleção cuidadosa de
-        produtos de qualidade, você pode ter a certeza de que está
-        comprando alimentos nutritivos e deliciosos. Não perca tempo e
-        encomende agora mesmo. Entregamos em toda Santa Luzia do Norte -
-        AL e garantimos um serviço rápido e eficiente. Faça sua
-        encomenda hoje e experimente a diferença que a Gavião Frutas
-        pode fazer na sua vida. -->
       </p>
       <a href="" class="buttonAll"> <i class="fab fa-whatsapp"></i> Encomende agora</a>
     </div>
@@ -220,7 +179,7 @@
         <h1>Ofertas Especiais</h1>
         <p>Confira abaixo os alimentos em promoção</p>
       </div>
-      <a href="catalogo.html">Ver mais</a>
+      <a href="./pages/catalogo.html">Ver mais</a>
     </div>
     <div class="swiper mySwiper">
       <div class="swiper-wrapper swiper-wrapper-food" id="swiper-wrapper-food">
@@ -264,7 +223,7 @@
         <h1>Ofertas Especiais</h1>
         <p>Confira abaixo os alimentos em promoção</p>
       </div>
-      <a href="catalogo.html">Ver mais</a>
+      <a href="./pages/catalogo.html">Ver mais</a>
     </div>
     <div class="swiper mySwiper">
       <div class="swiper-wrapper swiper-wrapper-drinks" id="swiper-wrapper-drinks">
@@ -351,56 +310,6 @@
       </ul>
     </div>
   </section>
-
- 
-  <!-- <section id="testimonial">
-    <div class="container testimonial">
-      <h5>Clientes satisfeitos</h5>
-      <div class="boxTestimonial">
-        <div>
-          <figcaption>
-            <h3>"</h3>
-            <p>
-              Excelente serviço! Os produtos do Gavião Frutas são sempre frescos e saborosos. A equipe é muito atenciosa e o processo de compra foi fácil e rápido. Recomendo a todos que buscam opções saudáveis e de qualidade.
-            </p>
-          </figcaption>
-          <hr>
-          <figure>
-            <img src="https://images.unsplash.com/photo-1488426862026-3ee34a7d66df?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzF8fHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D" alt="">
-            <h4>Layla</h4>
-          </figure>
-        </div>
-
-        <div>
-          <figcaption>
-            <h3>"</h3>
-            <p>
-              Eu fiquei impressionada com a qualidade das frutas e verduras do Gavião Frutas! Tudo é fresquinho e muito saboroso. Além disso, a equipe é muito atenciosa e sempre me ajuda a escolher os melhores produtos. Com certeza, vou continuar comprando na Gavião Frutas!
-            </p>
-          </figcaption>
-          <hr>
-          <figure>
-            <img src="https://images.unsplash.com/photo-1580489944761-15a19d654956?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NTF8fHBlb3BsZXxlbnwwfHwwfHx8MA%3D%3D%3D%3D" alt="">
-            <h4>Lindinalva</h4>
-          </figure>
-        </div>
-
-        <div>
-          <figcaption>
-            <h3>"</h3>
-            <p>
-              Sou cliente fiel do Gavião Frutas há meses e não tenho do que reclamar! Sempre encontro uma grande variedade de frutas e verduras frescas na loja, e a qualidade é impecável. Além disso, os preços são justos e o serviço de entrega é eficiente. Recomendo de olhos fechados!
-            </p>
-          </figcaption>
-          <hr>
-          <figure>
-            <img src="https://images.unsplash.com/photo-1539571696357-5a69c17a67c6?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8cGVvcGxlfGVufDB8fDB8fHww" alt="">
-            <h4>Anthony</h4>
-          </figure>
-        </div>
-      </div>
-    </div>
-  </section> -->
 
   <!-- GOOGLE MAPS -->
   <section id="googleMaps">
