--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
       <figure>
         <img
-          src="../assets/imgs/womanFruit.png"
+          src="assets/imgs/womanFruit.png"
           alt="Página Inicial"
           loading="lazy"
         />
