--- a/index.html
+++ b/index.html
@@ -229,11 +229,7 @@
       </div>
 
       <figure>
-        <img
-          src="assets/imgs/womanFruit.png"
-          alt="Página Inicial"
-          loading="lazy"
-        />
+        <img src="assets/imgs/womanFruit.png" alt="Página Inicial" />
         <div></div>
       </figure>
     </section>
