--- a/index.html
+++ b/index.html
@@ -229,7 +229,11 @@
       </div>
 
       <figure>
-        <img src="assets/imgs/womanFruit.png" alt="Página Inicial" />
+        <img
+          src="assets/imgs/womanfruit.png"
+          alt="Página Inicial"
+          loading="lazy"
+        />
         <div></div>
       </figure>
     </section>
