added tel and bairro

--- a/pages/login.html
+++ b/pages/login.html
@@ -82,7 +82,7 @@
             <div class="separateInputs">
               <div class="input-field">
                 <i class="fas fa-map-marker-alt"></i>
-                <select name="bairros" id="bairros">
+                <select name="bairros" id="signupBairro">
                   <option value="bairro 1">Bairro Exemplo</option>
                   <option value="bairro 2">Bairro 2</option>
                   <option value="bairro 3">Bairro 3</option>
@@ -90,7 +90,7 @@
               </div>
               <div class="input-field">
                 <i class="fas fa-phone"></i>
-                <input type="tel" placeholder="Telefone (82)" required />
+                <input id="signupTel" type="tel" placeholder="Telefone (82)" required />
               </div>
             </div>
             <div class="input-field">
